--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
 <div class="container-fluid">
   <nav class="navbar navbar-dark bg-primary">
     <a class="navbar-brand" href="#">Angular-ReduxIfy</a>
-    <div class="my-2">
-      <i class="navbar-brand fa fa-2x fa-cart-plus"></i>
-    </div>
+    <app-cart-status></app-cart-status>
   </nav>
   <router-outlet></router-outlet>
 </div>
