--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -1,3 +1,10 @@
-<p>
-  product-list works!
-</p>
+<div>
+    <div *ngIf="productList">
+      <div class=col-md-4 *ngFor="let product of productList">
+        <span>{{product.name}}</span>
+        <img class="img-responsive img-thumbnail" [src]="product.imageUrl" alt="Product Image"/>
+        <button (click)="showThisProductsDetail(product)">Detail</button>
+        <button (click)="addThisProductToCart(product)">Add to Cart</button>
+      </div>
+    </div>
+  </div>
