--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <nav class="navbar navbar-dark bg-primary">
+  <nav class="navbar navbar-dark bg-primary navbar-fixed-top">
     <a class="navbar-brand" href="#">Angular-ReduxIfy</a>
     <app-cart-status></app-cart-status>
   </nav>
@@ -8,7 +8,7 @@
 <footer class="footer">
   <div class="container">
     <span class="text-muted">Prototype created by Mohd Ali.</span>
-    <a href="#" class="my-2">
+    <a target="_blank" href="https://github.com/alimohammad/angular-reduxify" class="my-2">
       <i class="navbar-brand fa fa-2x fa-github"></i>
     </a>
   </div>
