--- a/src/app/cart/cart-status/cart-status.component.html
+++ b/src/app/cart/cart-status/cart-status.component.html
@@ -1,3 +1,3 @@
 <div class="my-2">
-  <i class="navbar-brand fa fa-2x fa-cart-plus"></i>
+  <i class="navbar-brand fa fa-2x fa-cart-plus">{{cartItemCount$ | async}}</i>
 </div>
