--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <nav class="navbar navbar-dark bg-primary navbar-fixed-top">
+  <nav class="navbar navbar-dark bg-primary fixed-top">
     <a class="navbar-brand" href="#">Angular-ReduxIfy</a>
     <app-cart-status></app-cart-status>
   </nav>
